v4.8.1 (2022.02.xx)
  - Fix HTTP query error messages reporting the multipart/form-data POST operation method as 'get'
  - Add a date/time stamp to the end of messages stored in the error log
  - Add new "Discovery HTTP proxy server" Advanced option
  
v4.8.0 (2022.01.31)
  - Add dependency on OpenSSL library version 3.0.1
  - Update SQLite database engine to version 3.37.2
  - Update cURL library to version 7.81.0
  - Adapt to HDHomeRun backend API 20220127 TLS v1.2 requirements
  - Change HTTP POST method to multipart/form-data when modifying backend recording rules

v4.7.0 (2021.10.12)
  - Update cURL library to version 7.79.1
  - Update libxml2 library to version 2.9.11
  - Add support for legacy HDHomeRun tuner devices
  - Change timer rule duplicate prevention name 'Record only new episodes' to 'Record new episodes only'
  - Change timer rule duplicate prevention name 'Record only recent episodes' to 'Record current season episodes only'

v4.6.0 (2021.08.26)
  - Update SQLite database engine to version 3.36.0
  - Update cURL library to version 7.78.0
  - Fix bug causing full refresh of guide data during startup if there are 'Unknown' channels in the lineup
  - Fix bug causing the static PVR connection string 'api.hdhomerun.com' to not appear in the Kodi 'PVR info' overlay
  - Add reporting of Live TV tuner signal status information
  - Add new "Disable reporting of active Live TV tuner signal status" Interface option
  - Remove defunct 'Demo Channels' channel group

v4.5.2 (2021.05.27)
  - Update SQLite database engine to version 3.35.5
  - Update cURL library to version 7.77.0
  - Prevent recording rule padding values from exceeding specified limits (1 hour for start padding, 3 hours for end padding)
  - Fix bug that incorrectly set recording rule padding values to 30 seconds instead of zero seconds when specified as "0 min" in Kodi