@@ -2,6 +2,7 @@ v4.8.1 (2022.02.xx)
   - Fix HTTP query error messages reporting the multipart/form-data POST operation method as 'get'
   - Add a date/time stamp to the end of messages stored in the error log
   - Add new "Discovery HTTP proxy server" Advanced option
+  - Remove "Disable reporting of active Live TV tuner signal status" Interface option
   
 v4.8.0 (2022.01.31)
   - Add dependency on OpenSSL library version 3.0.1
